Poprawki dla oceniania

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -282,6 +282,9 @@
     <Compile Include="Models\LessonSubject.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Mark.cs">
+      <DependentUpon>LanguageSchool.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Material.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
