--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -318,6 +318,9 @@
     <Compile Include="Models\User.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserClosedAnswer.cs">
+      <DependentUpon>LanguageSchool.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\UserData.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
@@ -330,10 +333,11 @@
     <Compile Include="Models\UsersGroup.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\UsersTests.cs">
+    <Compile Include="Models\UserTest.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\ExistingLessonSubjectsVM.cs" />
+    <Compile Include="Models\ViewModels\UserTestViewModel.cs" />
     <Compile Include="Models\ViewModels\UserOpenAnswerViewModel.cs" />
     <Compile Include="Models\ViewModels\OpenQuestionViewModel.cs" />
     <Compile Include="Models\ViewModels\TimeTableViewModel.cs" />
@@ -506,6 +510,7 @@
     <Content Include="Views\UserOpenAnswer\Grade.cshtml" />
     <Content Include="Views\UserOpenAnswer\Details.cshtml" />
     <Content Include="Views\LessonSubject\CreateFromExisting.cshtml" />
+    <Content Include="Views\Test\Taken.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
