--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -336,9 +336,15 @@
     <Compile Include="Models\UserTest.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\StudentGroupViewModels\StudentAwaitingTestVM.cs" />
+    <Compile Include="Models\ViewModels\StudentGroupViewModels\StudentGroupVM.cs" />
+    <Compile Include="Models\ViewModels\TakenTestViewModels\ChosenAnswerVM.cs" />
+    <Compile Include="Models\ViewModels\TakenTestViewModels\TakenOpenQuestionVM.cs" />
+    <Compile Include="Models\ViewModels\TakenTestViewModels\TakenClosedQuestionVM.cs" />
     <Compile Include="Models\ViewModels\DeleteDialogViewModel.cs" />
     <Compile Include="Models\ViewModels\ExistingLessonSubjectsVM.cs" />
     <Compile Include="Models\ViewModels\GroupStudentVM.cs" />
+    <Compile Include="Models\ViewModels\TakenTestViewModels\TakenTestVM.cs" />
     <Compile Include="Models\ViewModels\UserTestViewModel.cs" />
     <Compile Include="Models\ViewModels\UserOpenAnswerViewModel.cs" />
     <Compile Include="Models\ViewModels\OpenQuestionViewModel.cs" />
@@ -508,12 +514,12 @@
     <Content Include="Views\Shared\_PartHeader.cshtml" />
     <Content Include="Views\Test\Take.cshtml" />
     <Content Include="Views\Test\_PrepareAnswers.cshtml" />
-    <Content Include="Views\UserOpenAnswer\Index.cshtml" />
     <Content Include="Views\UserOpenAnswer\Grade.cshtml" />
     <Content Include="Views\UserOpenAnswer\Details.cshtml" />
     <Content Include="Views\LessonSubject\CreateFromExisting.cshtml" />
     <Content Include="Views\Test\Taken.cshtml" />
     <Content Include="Views\Shared\_DeleteDialog.cshtml" />
+    <Content Include="Views\Group\StudentDetails.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
