--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -515,7 +515,7 @@
     <Content Include="Views\Shared\_PartHeader.cshtml" />
     <Content Include="Views\Test\Take.cshtml" />
     <Content Include="Views\Test\_PrepareAnswers.cshtml" />
-    <Content Include="Views\UserOpenAnswer\Grade.cshtml" />
+    <Content Include="Views\UserOpenAnswer\Mark.cshtml" />
     <Content Include="Views\UserOpenAnswer\Details.cshtml" />
     <Content Include="Views\LessonSubject\CreateFromExisting.cshtml" />
     <Content Include="Views\Test\Taken.cshtml" />
