--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -318,6 +318,9 @@
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\ContactRequestViewModels\ContactRequestsDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\CourseViewModels\GroupShortDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\CourseViewModels\CourseInputVM.cs" />
+    <Compile Include="Models\ViewModels\CourseViewModels\CourseDetailsVM.cs" />
     <Compile Include="Models\ViewModels\GroupDetailsViewModels\StudentVM.cs" />
     <Compile Include="Models\ViewModels\ContactRequestViewModels\ContactRequestInputVM.cs" />
     <Compile Include="Models\ViewModels\GroupViewModels\GroupInputVM.cs" />
@@ -331,6 +334,7 @@
     <Compile Include="Models\ViewModels\ExistingLessonSubjectsVM.cs" />
     <Compile Include="Models\ViewModels\GroupStudentVM.cs" />
     <Compile Include="Models\ViewModels\TakenTestViewModels\TakenTestVM.cs" />
+    <Compile Include="Models\ViewModels\UserDataVM.cs" />
     <Compile Include="Models\ViewModels\UserTestViewModel.cs" />
     <Compile Include="Models\ViewModels\UserOpenAnswerViewModel.cs" />
     <Compile Include="Models\ViewModels\OpenQuestionViewModel.cs" />
@@ -353,7 +357,7 @@
     <Compile Include="Models\ViewModels\UserMessageViewModel.cs" />
     <Compile Include="Models\ViewModels\MenuViewModel.cs" />
     <Compile Include="Models\ViewModels\TestViewModel.cs" />
-    <Compile Include="Models\ViewModels\CourseViewModel.cs" />
+    <Compile Include="Models\ViewModels\CourseViewModels\CourseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
