--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -321,8 +321,9 @@
     <Compile Include="Models\ViewModels\CourseViewModels\GroupShortDetailsVM.cs" />
     <Compile Include="Models\ViewModels\CourseViewModels\CourseInputVM.cs" />
     <Compile Include="Models\ViewModels\CourseViewModels\CourseDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\GroupDetailsViewModels\StudentVM.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\StudentVM.cs" />
     <Compile Include="Models\ViewModels\ContactRequestViewModels\ContactRequestInputVM.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\TeacherGroupVM.cs" />
     <Compile Include="Models\ViewModels\GroupViewModels\GroupInputVM.cs" />
     <Compile Include="Models\ViewModels\SendMessageViewModels\SendToUserVM.cs" />
     <Compile Include="Models\ViewModels\StudentGroupViewModels\StudentAwaitingTestVM.cs" />
