--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -226,7 +226,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ViewModels\AdministrationViewModels\LoginViewModel.cs" />
     <Compile Include="Models\Answer.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
@@ -321,9 +321,11 @@
     <Compile Include="Models\ViewModels\CourseViewModels\GroupShortDetailsVM.cs" />
     <Compile Include="Models\ViewModels\CourseViewModels\CourseInputVM.cs" />
     <Compile Include="Models\ViewModels\CourseViewModels\CourseDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\GroupDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\UsersGroupInputVM.cs" />
     <Compile Include="Models\ViewModels\GroupViewModels\StudentVM.cs" />
     <Compile Include="Models\ViewModels\ContactRequestViewModels\ContactRequestInputVM.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\TeacherGroupVM.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\TeacherGroupDetailsVM.cs" />
     <Compile Include="Models\ViewModels\GroupViewModels\GroupInputVM.cs" />
     <Compile Include="Models\ViewModels\MessageViewModels\UserMessageDetailsVM.cs" />
     <Compile Include="Models\ViewModels\MessageViewModels\UserMessageShortDetailsVM.cs" />
@@ -331,34 +333,34 @@
     <Compile Include="Models\ViewModels\MessageViewModels\SendToUserInputVM.cs" />
     <Compile Include="Models\ViewModels\StudentGroupViewModels\StudentAwaitingTestVM.cs" />
     <Compile Include="Models\ViewModels\StudentGroupViewModels\StudentGroupVM.cs" />
-    <Compile Include="Models\ViewModels\TakenTestViewModels\ChosenAnswerVM.cs" />
-    <Compile Include="Models\ViewModels\TakenTestViewModels\TakenOpenQuestionVM.cs" />
-    <Compile Include="Models\ViewModels\TakenTestViewModels\TakenClosedQuestionVM.cs" />
-    <Compile Include="Models\ViewModels\DeleteDialogViewModel.cs" />
-    <Compile Include="Models\ViewModels\ExistingLessonSubjectsVM.cs" />
-    <Compile Include="Models\ViewModels\GroupStudentVM.cs" />
-    <Compile Include="Models\ViewModels\TakenTestViewModels\TakenTestVM.cs" />
-    <Compile Include="Models\ViewModels\UserDataVM.cs" />
-    <Compile Include="Models\ViewModels\UserTestViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserOpenAnswerViewModel.cs" />
-    <Compile Include="Models\ViewModels\OpenQuestionViewModel.cs" />
-    <Compile Include="Models\ViewModels\TimeTableViewModel.cs" />
-    <Compile Include="Models\ViewModels\SubjectsQuestionsViewModel.cs" />
-    <Compile Include="Models\ViewModels\ContactInfoListParameters.cs" />
-    <Compile Include="Models\ViewModels\LessonSubjectViewModel.cs" />
-    <Compile Include="Models\ViewModels\GroupTimeViewModel.cs" />
-    <Compile Include="Models\ViewModels\UsersGroupViewModel.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModel.cs" />
-    <Compile Include="Models\ViewModels\MaterialViewModel.cs" />
-    <Compile Include="Models\ViewModels\ListParameters.cs" />
-    <Compile Include="Models\ViewModels\AlertViewModel.cs" />
-    <Compile Include="Models\ViewModels\AnswerViewModel.cs" />
-    <Compile Include="Models\ViewModels\ClosedQuestionViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserVM.cs" />
-    <Compile Include="Models\ViewModels\UserViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserDataViewModel.cs" />
-    <Compile Include="Models\ViewModels\MenuViewModel.cs" />
-    <Compile Include="Models\ViewModels\TestViewModel.cs" />
+    <Compile Include="Models\ViewModels\TestViewModels\ChosenAnswerVM.cs" />
+    <Compile Include="Models\ViewModels\TestViewModels\TakenOpenQuestionVM.cs" />
+    <Compile Include="Models\ViewModels\TestViewModels\TakenClosedQuestionVM.cs" />
+    <Compile Include="Models\ViewModels\AdministrationViewModels\DeleteDialogViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubjectViewModels\ExistingLessonSubjectsVM.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\GroupStudentVM.cs" />
+    <Compile Include="Models\ViewModels\TestViewModels\TakenTestVM.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\UserDataVM.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\UserTestViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\UserOpenAnswerViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubjectViewModels\OpenQuestionViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\TimeTableViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubjectViewModels\SubjectsQuestionsViewModel.cs" />
+    <Compile Include="Models\ViewModels\AdministrationViewModels\ContactInfoListParameters.cs" />
+    <Compile Include="Models\ViewModels\LessonSubjectViewModels\LessonSubjectViewModel.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\GroupTimeViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\UsersGroupViewModel.cs" />
+    <Compile Include="Models\ViewModels\GroupViewModels\GroupViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubjectViewModels\MaterialViewModel.cs" />
+    <Compile Include="Models\ViewModels\AdministrationViewModels\ListParameters.cs" />
+    <Compile Include="Models\ViewModels\AdministrationViewModels\AlertViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubjectViewModels\AnswerViewModel.cs" />
+    <Compile Include="Models\ViewModels\TestViewModels\ClosedQuestionViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\UserVM.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\UserViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModels\UserDataViewModel.cs" />
+    <Compile Include="Models\ViewModels\AdministrationViewModels\MenuViewModel.cs" />
+    <Compile Include="Models\ViewModels\TestViewModels\TestViewModel.cs" />
     <Compile Include="Models\ViewModels\CourseViewModels\CourseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
