Rename dla folderów

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -226,7 +226,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ViewModels\AdministrationViewModels\LoginViewModel.cs" />
+    <Compile Include="Models\ViewModels\Administration\LoginViewModel.cs" />
     <Compile Include="Models\Answer.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
@@ -317,51 +317,51 @@
     <Compile Include="Models\UserTest.cs">
       <DependentUpon>LanguageSchool.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ViewModels\ContactRequestViewModels\ContactRequestsDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\CourseViewModels\GroupShortDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\CourseViewModels\CourseInputVM.cs" />
-    <Compile Include="Models\ViewModels\CourseViewModels\CourseDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\GroupDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\UsersGroupInputVM.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\StudentVM.cs" />
-    <Compile Include="Models\ViewModels\ContactRequestViewModels\ContactRequestInputVM.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\TeacherGroupDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\GroupInputVM.cs" />
-    <Compile Include="Models\ViewModels\MessageViewModels\UserMessageDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\MessageViewModels\UserMessageShortDetailsVM.cs" />
-    <Compile Include="Models\ViewModels\MessageViewModels\MessageInputVM.cs" />
-    <Compile Include="Models\ViewModels\MessageViewModels\SendToUserInputVM.cs" />
-    <Compile Include="Models\ViewModels\StudentGroupViewModels\StudentAwaitingTestVM.cs" />
-    <Compile Include="Models\ViewModels\StudentGroupViewModels\StudentGroupVM.cs" />
-    <Compile Include="Models\ViewModels\TestViewModels\ChosenAnswerVM.cs" />
-    <Compile Include="Models\ViewModels\TestViewModels\TakenOpenQuestionVM.cs" />
-    <Compile Include="Models\ViewModels\TestViewModels\TakenClosedQuestionVM.cs" />
-    <Compile Include="Models\ViewModels\AdministrationViewModels\DeleteDialogViewModel.cs" />
-    <Compile Include="Models\ViewModels\LessonSubjectViewModels\ExistingLessonSubjectsVM.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\GroupStudentVM.cs" />
-    <Compile Include="Models\ViewModels\TestViewModels\TakenTestVM.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\UserDataVM.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\UserTestViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\UserOpenAnswerViewModel.cs" />
-    <Compile Include="Models\ViewModels\LessonSubjectViewModels\OpenQuestionViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\TimeTableViewModel.cs" />
-    <Compile Include="Models\ViewModels\LessonSubjectViewModels\SubjectsQuestionsViewModel.cs" />
-    <Compile Include="Models\ViewModels\AdministrationViewModels\ContactInfoListParameters.cs" />
-    <Compile Include="Models\ViewModels\LessonSubjectViewModels\LessonSubjectViewModel.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\GroupTimeViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\UsersGroupViewModel.cs" />
-    <Compile Include="Models\ViewModels\GroupViewModels\GroupViewModel.cs" />
-    <Compile Include="Models\ViewModels\LessonSubjectViewModels\MaterialViewModel.cs" />
-    <Compile Include="Models\ViewModels\AdministrationViewModels\ListParameters.cs" />
-    <Compile Include="Models\ViewModels\AdministrationViewModels\AlertViewModel.cs" />
-    <Compile Include="Models\ViewModels\LessonSubjectViewModels\AnswerViewModel.cs" />
-    <Compile Include="Models\ViewModels\TestViewModels\ClosedQuestionViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\UserVM.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\UserViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserViewModels\UserDataViewModel.cs" />
-    <Compile Include="Models\ViewModels\AdministrationViewModels\MenuViewModel.cs" />
-    <Compile Include="Models\ViewModels\TestViewModels\TestViewModel.cs" />
-    <Compile Include="Models\ViewModels\CourseViewModels\CourseViewModel.cs" />
+    <Compile Include="Models\ViewModels\ContactRequest\ContactRequestsDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\Course\GroupShortDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\Course\CourseInputVM.cs" />
+    <Compile Include="Models\ViewModels\Course\CourseDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\Group\GroupDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\Group\UsersGroupInputVM.cs" />
+    <Compile Include="Models\ViewModels\Group\StudentVM.cs" />
+    <Compile Include="Models\ViewModels\ContactRequest\ContactRequestInputVM.cs" />
+    <Compile Include="Models\ViewModels\Group\TeacherGroupDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\Group\GroupInputVM.cs" />
+    <Compile Include="Models\ViewModels\Message\UserMessageDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\Message\UserMessageShortDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\Message\MessageInputVM.cs" />
+    <Compile Include="Models\ViewModels\Message\SendToUserInputVM.cs" />
+    <Compile Include="Models\ViewModels\StudentGroup\StudentAwaitingTestVM.cs" />
+    <Compile Include="Models\ViewModels\StudentGroup\StudentGroupVM.cs" />
+    <Compile Include="Models\ViewModels\Test\ChosenAnswerVM.cs" />
+    <Compile Include="Models\ViewModels\Test\TakenOpenQuestionVM.cs" />
+    <Compile Include="Models\ViewModels\Test\TakenClosedQuestionVM.cs" />
+    <Compile Include="Models\ViewModels\Administration\DeleteDialogViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubject\ExistingLessonSubjectsVM.cs" />
+    <Compile Include="Models\ViewModels\Group\GroupStudentVM.cs" />
+    <Compile Include="Models\ViewModels\Test\TakenTestVM.cs" />
+    <Compile Include="Models\ViewModels\User\UserDataVM.cs" />
+    <Compile Include="Models\ViewModels\User\UserTestViewModel.cs" />
+    <Compile Include="Models\ViewModels\User\UserOpenAnswerViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubject\OpenQuestionViewModel.cs" />
+    <Compile Include="Models\ViewModels\User\TimeTableViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubject\SubjectsQuestionsViewModel.cs" />
+    <Compile Include="Models\ViewModels\Administration\ContactInfoListParameters.cs" />
+    <Compile Include="Models\ViewModels\LessonSubject\LessonSubjectViewModel.cs" />
+    <Compile Include="Models\ViewModels\Group\GroupTimeViewModel.cs" />
+    <Compile Include="Models\ViewModels\User\UsersGroupViewModel.cs" />
+    <Compile Include="Models\ViewModels\Group\GroupViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubject\MaterialViewModel.cs" />
+    <Compile Include="Models\ViewModels\Administration\ListParameters.cs" />
+    <Compile Include="Models\ViewModels\Administration\AlertViewModel.cs" />
+    <Compile Include="Models\ViewModels\LessonSubject\AnswerViewModel.cs" />
+    <Compile Include="Models\ViewModels\Test\ClosedQuestionViewModel.cs" />
+    <Compile Include="Models\ViewModels\User\UserVM.cs" />
+    <Compile Include="Models\ViewModels\User\UserViewModel.cs" />
+    <Compile Include="Models\ViewModels\User\UserDataViewModel.cs" />
+    <Compile Include="Models\ViewModels\Administration\MenuViewModel.cs" />
+    <Compile Include="Models\ViewModels\Test\TestViewModel.cs" />
+    <Compile Include="Models\ViewModels\Course\CourseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
