Dodanie intgreater, zmiany w kontrolerach oraz poprawka dla wyświetlania w edit

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -321,6 +321,7 @@
     <Compile Include="Models\ViewModels\Course\GroupShortDetailsVM.cs" />
     <Compile Include="Models\ViewModels\Course\CourseInputVM.cs" />
     <Compile Include="Models\ViewModels\Course\CourseDetailsVM.cs" />
+    <Compile Include="Models\ViewModels\IntGreaterThanAttribute.cs" />
     <Compile Include="Models\ViewModels\DateLessThanAttribute.cs" />
     <Compile Include="Models\ViewModels\Group\GroupDetailsVM.cs" />
     <Compile Include="Models\ViewModels\Group\UsersGroupInputVM.cs" />
