--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -372,6 +372,7 @@
     <Content Include="App_Data\LanguageSchool_Primary_log.ldf">
       <DependentUpon>LanguageSchool_Primary.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Data\script_update.sql" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\home_marketable.css" />
@@ -414,6 +415,7 @@
     <Content Include="Models\LanguageSchool.edmx.diagram">
       <DependentUpon>LanguageSchool.edmx</DependentUpon>
     </Content>
+    <Content Include="App_Data\sqlcmd_update.bat" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
