Lepsza struktura tabek na liście kursów, dodanie obsługi filtracji przy zwracaniu pustego zestawu pól

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -490,7 +490,8 @@
     <Content Include="Views\Group\StudentDetails.cshtml" />
     <Content Include="Views\Message\SendToUser.cshtml" />
     <Content Include="Views\ContactRequest\Edit.cshtml" />
-    <Content Include="Views\Shared\_TabSortHeader.cshtml" />
+    <Content Include="Views\Shared\_UserDataTabSortHeader.cshtml" />
+    <Content Include="Views\Shared\_CourseTabSortHeader.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
