Poprawka dla orderowania, przeniesienie przełączania kolejności do osobnych metod

--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -489,6 +489,7 @@
     <Content Include="Views\Shared\_UserDataTabSortHeader.cshtml" />
     <Content Include="Views\Shared\_CourseTabSortHeader.cshtml" />
     <Content Include="Views\LessonSubject\Edit.cshtml" />
+    <Content Include="Views\Shared\_CourseIndSortHeader.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
