--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -374,6 +374,7 @@
     <Content Include="App_Data\script_update.sql" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\home_marketable.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
@@ -479,7 +480,6 @@
     <Content Include="Views\Shared\_PartHeader.cshtml" />
     <Content Include="Views\Test\Take.cshtml" />
     <Content Include="Views\UserOpenAnswer\Mark.cshtml" />
-    <Content Include="Views\UserOpenAnswer\Details.cshtml" />
     <Content Include="Views\LessonSubject\CreateFromExisting.cshtml" />
     <Content Include="Views\Test\Taken.cshtml" />
     <Content Include="Views\Shared\_DeleteDialog.cshtml" />
