--- a/LanguageSchool/Web.csproj
+++ b/LanguageSchool/Web.csproj
@@ -374,8 +374,8 @@
     <Content Include="App_Data\script_update.sql" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\favicon.ico" />
     <Content Include="Content\home_marketable.css" />
+    <Content Include="Content\logoIcon.ico" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
