--- a/LanguageSchool/Web.config
+++ b/LanguageSchool/Web.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
+  For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
   <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	  <add name="DefaultConnection" connectionString="Data Source=database-basetest-devtest.csdo5tytlpzp.us-east-2.rds.amazonaws.com;AttachDbFilename=|DataDirectory|\aspnet-LanguageSchool-20181105094129.mdf;Initial Catalog=aspnet-LanguageSchool-20181105094129;User Id=admin;Password=KatPassword" providerName="System.Data.SqlClient" />
-	  <add name="LanguageSchoolEntities" connectionString="metadata=res://*/Models.LanguageSchool.csdl|res://*/Models.LanguageSchool.ssdl|res://*/Models.LanguageSchool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=database-basetest-devtest.csdo5tytlpzp.us-east-2.rds.amazonaws.com;initial catalog=LanguageSchool;User Id=admin;Password=KatPassword;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	  <!--<add name="LanguageSchoolEntities" connectionString="metadata=res://*/Models.LanguageSchool.csdl|res://*/Models.LanguageSchool.ssdl|res://*/Models.LanguageSchool.msl;
-		   provider=System.Data.SqlClient;provider connection string=&quot;data source=database-babel-devtest-instance-1.csdo5tytlpzp.us-east-2.rds.amazonaws.com,1433;initial catalog=ttest;User Id=postgres;Password=KatPassword;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-LanguageSchool-20181105094129.mdf;Initial Catalog=aspnet-LanguageSchool-20181105094129;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="LanguageSchoolEntities" connectionString="metadata=res://*/Models.LanguageSchool.csdl|res://*/Models.LanguageSchool.ssdl|res://*/Models.LanguageSchool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=LanguageSchool;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -70,11 +70,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
